@@ -18,14 +18,21 @@
 */
 package org.apache.cassandra.db.lifecycle;
 
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
 
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -158,12 +165,23 @@ public class HelpersTest
     @Test
     public void testMarkObsolete()
     {
+        testMarkObsoleteHelper(false);
+    }
+    @Test
+    public void testBulkMarkObsolete()
+    {
+        testMarkObsoleteHelper(true);
+    }
+
+    public void testMarkObsoleteHelper(boolean bulk)
+    {
         ColumnFamilyStore cfs = MockSchema.newCFS();
         LogTransaction txnLogs = new LogTransaction(OperationType.UNKNOWN);
         Iterable<SSTableReader> readers = Lists.newArrayList(MockSchema.sstable(1, cfs), MockSchema.sstable(2, cfs));
+        Iterable<SSTableReader> readersToKeep = Lists.newArrayList(MockSchema.sstable(3, cfs), MockSchema.sstable(4, cfs));
 
         List<LogTransaction.Obsoletion> obsoletions = new ArrayList<>();
-        Assert.assertNull(Helpers.prepareForObsoletion(readers, txnLogs, obsoletions, null));
+        Assert.assertNull(bulk ? Helpers.prepareForBulkObsoletion(readers, txnLogs, obsoletions, null) : Helpers.prepareForObsoletion(readers, txnLogs, obsoletions, null));
         assertNotNull(obsoletions);
         assertEquals(2, obsoletions.size());
 
@@ -172,9 +190,47 @@ public class HelpersTest
         for (SSTableReader reader : readers)
             Assert.assertTrue(reader.isMarkedCompacted());
 
+        for (SSTableReader reader : readersToKeep)
+            Assert.assertFalse(reader.isMarkedCompacted());
+
         accumulate = Helpers.markObsolete(obsoletions, null);
         assertNotNull(accumulate);
 
         txnLogs.finish();
+    }
+
+    @Test
+    public void compareBulkAndNormalObsolete() throws IOException
+    {
+        ColumnFamilyStore cfs = MockSchema.newCFS();
+        LogTransaction txnLogs = new LogTransaction(OperationType.UNKNOWN);
+        LogTransaction txnLogs2 = new LogTransaction(OperationType.UNKNOWN);
+
+        Collection<SSTableReader> readers = Lists.newArrayList(MockSchema.sstable(1, cfs), MockSchema.sstable(2, cfs));
+        // add a few readers that should not be removed:
+        Lists.newArrayList(MockSchema.sstable(3, cfs), MockSchema.sstable(4, cfs));
+
+        List<LogTransaction.Obsoletion> normalObsoletions = new ArrayList<>();
+        List<LogTransaction.Obsoletion> bulkObsoletions = new ArrayList<>();
+
+        Assert.assertNull(Helpers.prepareForBulkObsoletion(readers, txnLogs, normalObsoletions, null));
+        Assert.assertNull(Helpers.prepareForObsoletion(readers, txnLogs2, bulkObsoletions, null));
+
+        assertEquals(Sets.newHashSet(readers), normalObsoletions.stream().map(obs -> obs.reader).collect(Collectors.toSet()));
+        assertEquals(Sets.newHashSet(readers), bulkObsoletions.stream().map(obs -> obs.reader).collect(Collectors.toSet()));
+
+        Set<String> normalLogRecords = new HashSet<>();
+        Set<String> bulkLogRecords = new HashSet<>();
+
+        for (File f : txnLogs.logFiles())
+            Files.lines(f.toPath()).forEach(bulkLogRecords::add);
+        for (File f : txnLogs2.logFiles())
+            Files.lines(f.toPath()).forEach(normalLogRecords::add);
+
+        Assert.assertEquals(readers.size(), normalLogRecords.size());
+        Assert.assertEquals(bulkLogRecords, normalLogRecords);
+
+        txnLogs.finish();
+        txnLogs2.finish();
     }
 }
